[gd_scene load_steps=7 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://icon_2.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]

resource/name = "bunch_of_stuff"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 360.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite1:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 2, 2 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite1:modulate")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Color( 1, 1, 1, 1 ), Color( 0.078125, 1, 0, 1 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "more_complicated_path"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("more/complicated/path/Sprite3:flip_h")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ false, true, false ] }
tracks/1/type = "value"
tracks/1/path = NodePath("more/complicated/path/Sprite3:flip_v")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5, 1.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ false, true, false ] }

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 360.0 ] }

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]

transform/pos = Vector2( 164.338, 112.962 )
transform/rot = 360.0
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
modulate = Color( 0.078125, 1, 0, 1 )

[node name="SpinButton" type="Button" parent="Sprite1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -62.0
margin/top = 41.0
margin/right = 58.0
margin/bottom = 87.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Spin"
flat = false

[node name="Sprite2" type="Sprite" parent="."]

transform/pos = Vector2( 760.053, 103.406 )
texture = ExtResource( 2 )
modulate = Color( 1, 0, 0, 1 )

[node name="SpinButton" type="Button" parent="Sprite2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -59.0
margin/top = 44.0
margin/right = 61.0
margin/bottom = 90.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Spin"
flat = false

[node name="BunchOfStuff" type="Button" parent="Sprite2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -60.0
margin/top = 101.0
margin/right = 60.0
margin/bottom = 147.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Bunch of Stuff"
flat = false

[node name="ComplicatedPath" type="Button" parent="Sprite2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -60.0
margin/top = 153.0
margin/right = 60.0
margin/bottom = 199.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Complicated Path"
flat = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bunch_of_stuff = SubResource( 1 )
anims/more_complicated_path = SubResource( 2 )
anims/spin = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="more" type="Node2D" parent="."]

[node name="complicated" type="Node2D" parent="more"]

[node name="path" type="Node2D" parent="more/complicated"]

[node name="Sprite3" type="Sprite" parent="more/complicated/path"]

transform/pos = Vector2( 463.46, 91.5403 )
texture = ExtResource( 3 )

[node name="BunchOfStuffComplicated" type="Button" parent="more/complicated/path/Sprite3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -60.0
margin/top = 43.0
margin/right = 67.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Bunch of Stuff"
flat = false

[connection signal="pressed" from="Sprite1/SpinButton" to="." method="_on_Spin1Button_pressed"]

[connection signal="pressed" from="Sprite2/SpinButton" to="." method="_on_Spin2Button_pressed"]

[connection signal="pressed" from="Sprite2/BunchOfStuff" to="." method="_on_BunchOfStuff_pressed"]

[connection signal="pressed" from="Sprite2/ComplicatedPath" to="." method="_on_ComplicatedPath_pressed"]

[connection signal="pressed" from="more/complicated/path/Sprite3/BunchOfStuffComplicated" to="." method="_on_BunchOfStuffComplicated_pressed"]


